# morphling

./: .gitignore  .travis.yml  LICENSE  README.md  database-template.json  metrics_morphling.py
ci/: install.sh  script.sh
game-server/: CMakeLists.txt  README.md  test.sh
game-server/cmake/: gtest.cmake
game-server/games/: CMakeLists.txt
game-server/games/tictactoe/: CMakeLists.txt  db-tictactoe.json  rule_board_is_full.cc  rule_has_alignment.cc  tictactoe_controller.cc  tictactoe_engine.cc  tictactoe_model.cc  tictactoe_model.h  tictactoe_player.h
game-server/games/tictactwo/: CMakeLists.txt  action_move_grid.cc  action_move_piece.cc  action_place_piece.h  rule_has_alignment.h  tictactwo_controller.cc  tictactwo_engine.cc  tictactwo_engine.h  tictactwo_model.cc  tictactwo_model.h  tictactwo_player.h
game-server/samples/: CMakeLists.txt  test_gcp_socket.cc
game-server/server/: CMakeLists.txt  main.cc
game-server/server/database/: CMakeLists.txt  firebase.cc  firebase.h  stub.cc  stub.h
game-server/server/gamelogic/: CMakeLists.txt  README.md
game-server/server/gamelogic/controller/: CMakeLists.txt  action.h  controller.cc  controller.h  game_engine.cc  game_engine.h  rule.h
game-server/server/gamelogic/games/: CMakeLists.txt
game-server/server/gamelogic/games/tictactoe/: CMakeLists.txt  action_mark.cc  action_mark.h  gamepiece.h  rule_board_is_full.cc  rule_board_is_full.h  rule_has_alignment.cc  rule_has_alignment.h  tictactoe_controller.h  tictactoe_engine.cc  tictactoe_engine.h  tictactoe_model.cc  tictactoe_model.h  tictactoe_player.h
game-server/server/gamelogic/games/tictactwo/: CMakeLists.txt  action_move_grid.cc  action_move_grid.h  action_move_piece.cc  action_move_piece.h  action_place_piece.cc  gamepiece.h  rule_board_is_full.cc  rule_board_is_full.h  rule_has_alignment.cc  rule_has_alignment.h  tictactwo_controller.h  tictactwo_engine.cc  tictactwo_model.cc  tictactwo_model.h  tictactwo_player.h
game-server/server/gamelogic/model/: CMakeLists.txt  element_accessor.h  model.cc  model.h  player.h  point2d.h
game-server/server/gamelogic/model/gameobject/: CMakeLists.txt  board2d.cc  board2d.h  game_object.h  gameobject.h
game-server/server/gamelogic/view/: CMakeLists.txt  board2d_to_strings_mapper.cc  board2d_to_strings_mapper.h  model_to_strings_mapper.h  token_to_url_mapper.cc  token_to_url_mapper.h
game-server/server/networking/: CMakeLists.txt  gcp_client.cc  gcp_client.h  gcp_server.cc  gcp_server.h  gcp_server_socket.cc  gcp_server_socket.h  gcp_socket.cc  gcp_socket.h  gcp_socket_server.cc  gcp_socket_server.h  stub.cc
game-server/server/serverstate/: CMakeLists.txt  game_instance.cc  game_instance.h  server_state.cc  server_state.h
game-server/serverstate/: CMakeLists.txt
game-server/test/: CMakeLists.txt
game-server/test/unit/: CMakeLists.txt  test_board2d_to_strings_mapper.cc  test_firebase.cc  test_gamelogic_model.cc  test_gcp_server.cc  test_gcp_socket_server.cc  test_play.cc  test_serverstate.cc  test_stress.cc  test_stub.cc  test_tictactoe.cc  test_token_to_url_mapper.cc
game-server/test/unit/tictactwo/: .#test_tictactwo.cc  CMakeLists.txt  test_board_is_full_rule.cc  test_has_alignment_rule_fixed_grid.cc  test_has_alignment_rule_moving_grid.cc  test_illegal_move_grid_action.cc  test_legal_move_grid_action.cc  test_move_piece_action.cc  test_place_piece_action.cc  test_tictactwo.cc
web-server/: Makefile  README.md  __init__.py  config.cfg  form.py  hello.py  morphling.py  requirements.txt
web-server/static/css/: simple-sidebar.css  tictactoe.css
web-server/static/js/: firebase.js  firebase_config.js  settings.js
web-server/templates/: Bracket.html  Game.html  Login.html  Ranking.html  Settings.html  api-put-result.html  index.html
web-server/tests/: test_morphling.py
